# ai-readme

./: .gitignore  BLANK_README.md  README.md  auto_readme.py  llm_api.py  pyproject.toml  requirements.txt  source.env
.github/workflows/: publish.yml
config/: llm_config.json
src/aireadme/: config.py  core.py
src/aireadme/utils/: cli.py  logo_generator.py  model_client.py
src/autoreadme/: cli.py  config.py  core.py  llm.py
src/autoreadme/utils/: file_helper.py
src/readmecraft/: BLANK_README.md  config.py  core.py
src/readmecraft/utils/: cli.py  llm.py  logo_generator.py  model_client.py
tests/: test_core_threading.py  test_dependencies_generation.py  test_llm.py  test_logo_generator.py
