[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoreadme"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A tool to automatically generate README files for your projects."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.0.0",
    "requests",
    "rich",
]

[project.scripts]
autoreadme = "autoreadme.cli:main"

[project.urls]
"Homepage" = "https://github.com/your-username/autoreadme"
"Bug Tracker" = "https://github.com/your-username/autoreadme/issues"